exports[`Update should allow change of fund for an instance of SubFund 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "TEST 1",
        "value": 1,
      },
      Object {
        "label": "TEST 2",
        "value": 2,
      },
      Object {
        "label": "TEST 3",
        "value": 3,
      },
      Object {
        "label": "TEST 4",
        "value": 4,
      },
    ]
  }
  preFill={[Function]}>
  <div
    className="push-top@handheld soft-half-top@lap-and-up">
    <Form
      classes={
        Array [
          "text-left",
          "hard",
        ]
      }
      id="add-to-cart"
      submit={[Function]}>
      <form
        className="hard-ends text-left hard"
        id="add-to-cart"
        onSubmit={[Function]}>
        <FieldSet>
          <fieldset
            className="flush-bottom">
            <div
              className="display-inline-block">
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 1",
                      "value": 1,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                inputVal={10}
                instance={0}
                preFill={[Function]}
                primary={true}
                remove={[Function]}
                selectVal={1}
                update={[Function]}>
                <div />
              </mockConstructor>
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                inputVal={20}
                instance={1}
                preFill={[Function]}
                remove={[Function]}
                selectVal={2}
                update={[Function]}>
                <div />
              </mockConstructor>
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                instance={2}
                preFill={[Function]}
                remove={[Function]}
                update={[Function]}>
                <div />
              </mockConstructor>
              <h3
                className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                so my total is
              </h3>
              <h3
                className="display-inline-block text-brand push-half-bottom">
                $0.00
              </h3>
            </div>
            <div
              className="push-top">
              <mockConstructor
                disabled={false}>
                <div />
              </mockConstructor>
            </div>
          </fieldset>
        </FieldSet>
      </form>
    </Form>
  </div>
</Layout>
`;

exports[`Update should allow for multiple updates on separate instances of SubFund 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "TEST 1",
        "value": 1,
      },
      Object {
        "label": "TEST 2",
        "value": 2,
      },
      Object {
        "label": "TEST 3",
        "value": 3,
      },
      Object {
        "label": "TEST 4",
        "value": 4,
      },
    ]
  }
  preFill={[Function]}>
  <div
    className="push-top@handheld soft-half-top@lap-and-up">
    <Form
      classes={
        Array [
          "text-left",
          "hard",
        ]
      }
      id="add-to-cart"
      submit={[Function]}>
      <form
        className="hard-ends text-left hard"
        id="add-to-cart"
        onSubmit={[Function]}>
        <FieldSet>
          <fieldset
            className="flush-bottom">
            <div
              className="display-inline-block">
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 1",
                      "value": 1,
                    },
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                inputVal={10}
                instance={0}
                preFill={[Function]}
                primary={true}
                remove={[Function]}
                selectVal={1}
                update={[Function]}>
                <div />
              </mockConstructor>
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                inputVal={30}
                instance={1}
                preFill={[Function]}
                remove={[Function]}
                selectVal={3}
                update={[Function]}>
                <div />
              </mockConstructor>
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                instance={2}
                preFill={[Function]}
                remove={[Function]}
                update={[Function]}>
                <div />
              </mockConstructor>
              <h3
                className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                so my total is
              </h3>
              <h3
                className="display-inline-block text-brand push-half-bottom">
                $0.00
              </h3>
            </div>
            <div
              className="push-top">
              <mockConstructor
                disabled={false}>
                <div />
              </mockConstructor>
            </div>
          </fieldset>
        </FieldSet>
      </form>
    </Form>
  </div>
</Layout>
`;

exports[`Update should update state to reflect one fund update 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "TEST 1",
        "value": 1,
      },
      Object {
        "label": "TEST 2",
        "value": 2,
      },
      Object {
        "label": "TEST 3",
        "value": 3,
      },
      Object {
        "label": "TEST 4",
        "value": 4,
      },
    ]
  }
  preFill={[Function]}>
  <div
    className="push-top@handheld soft-half-top@lap-and-up">
    <Form
      classes={
        Array [
          "text-left",
          "hard",
        ]
      }
      id="add-to-cart"
      submit={[Function]}>
      <form
        className="hard-ends text-left hard"
        id="add-to-cart"
        onSubmit={[Function]}>
        <FieldSet>
          <fieldset
            className="flush-bottom">
            <div
              className="display-inline-block">
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 1",
                      "value": 1,
                    },
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                inputVal={10}
                instance={0}
                preFill={[Function]}
                primary={true}
                remove={[Function]}
                selectVal={1}
                update={[Function]}>
                <div />
              </mockConstructor>
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                instance={1}
                preFill={[Function]}
                remove={[Function]}
                update={[Function]}>
                <div />
              </mockConstructor>
              <h3
                className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                so my total is
              </h3>
              <h3
                className="display-inline-block text-brand push-half-bottom">
                $0.00
              </h3>
            </div>
            <div
              className="push-top">
              <mockConstructor
                disabled={false}>
                <div />
              </mockConstructor>
            </div>
          </fieldset>
        </FieldSet>
      </form>
    </Form>
  </div>
</Layout>
`;

exports[`test should handle multiple accounts 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "TEST 1",
        "value": 1,
      },
      Object {
        "label": "TEST 2",
        "value": 2,
      },
      Object {
        "label": "TEST 3",
        "value": 3,
      },
      Object {
        "label": "TEST 4",
        "value": 4,
      },
    ]
  }
  preFill={[Function]}>
  <div
    className="push-top@handheld soft-half-top@lap-and-up">
    <Form
      classes={
        Array [
          "text-left",
          "hard",
        ]
      }
      id="add-to-cart"
      submit={[Function]}>
      <form
        className="hard-ends text-left hard"
        id="add-to-cart"
        onSubmit={[Function]}>
        <FieldSet>
          <fieldset
            className="flush-bottom">
            <div
              className="display-inline-block">
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 1",
                      "value": 1,
                    },
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                inputVal={null}
                instance={0}
                preFill={[Function]}
                primary={true}
                remove={[Function]}
                selectVal={1}
                update={[Function]}>
                <div />
              </mockConstructor>
              <mockConstructor
                accounts={
                  Array [
                    Object {
                      "label": "TEST 2",
                      "value": 2,
                    },
                    Object {
                      "label": "TEST 3",
                      "value": 3,
                    },
                    Object {
                      "label": "TEST 4",
                      "value": 4,
                    },
                  ]
                }
                instance={1}
                preFill={[Function]}
                remove={[Function]}
                update={[Function]}>
                <div />
              </mockConstructor>
              <h3
                className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                so my total is
              </h3>
              <h3
                className="display-inline-block text-brand push-half-bottom">
                $0.00
              </h3>
            </div>
            <div
              className="push-top">
              <mockConstructor
                disabled={false}>
                <div />
              </mockConstructor>
            </div>
          </fieldset>
        </FieldSet>
      </form>
    </Form>
  </div>
</Layout>
`;

exports[`test should render with minimal props 1`] = `
<div
  className="push-top@handheld soft-half-top@lap-and-up">
  <Form
    classes={
      Array [
        "text-left",
        "hard",
      ]
    }
    id="add-to-cart"
    submit={[Function]}>
    <div
      className="display-inline-block">
      <mockConstructor
        accounts={
          Array [
            Object {
              "value": "test",
            },
          ]
        }
        instance={0}
        preFill={[Function]}
        primary={true}
        remove={[Function]}
        update={[Function]} />
      <h3
        className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
        so my total is
      </h3>
      <h3
        className="display-inline-block text-brand push-half-bottom">
        $0.00
      </h3>
    </div>
    <div
      className="push-top">
      <mockConstructor
        disabled={false} />
    </div>
  </Form>
</div>
`;
